hotfix: corrige tipo de lista por NullPointerException